class magic method

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9AabmdfT1xpDyR2tjP7Z5",
+      "authorship_tag": "ABX9TyPuUpUmJ9g3xzfPLv4xe2dK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "FZq8zLY5e2oL"
       },
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6BYMFlcBgl-6",
-        "outputId": "12210019-8917-490b-c365-3194bfce7fa1"
+        "outputId": "3b41c66a-2fea-4693-a29f-6ba28195c051"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "jtx99guujCcK"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "U2VWtdDYlTbj"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -143,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5ck3RGpl5g7",
-        "outputId": "a3d4dcf4-7b65-4d9e-896c-1e7e482dbac4"
+        "outputId": "679abeb2-20fe-4f70-f259-0b505637c7c3"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "EVipaeHLl7BK"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "Gjjk-MDEq_wT"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -200,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8R0hATdxrl2b",
-        "outputId": "579dd4df-cb02-4652-b2c2-89e0c50c4920"
+        "outputId": "b377f514-4399-4337-f4d5-b820fc9d445a"
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "8zrVwAZEsM8M"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -292,15 +292,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8_EX1zVXzM1m",
-        "outputId": "67346af2-003a-4a40-c65f-e39346de2e2b"
+        "outputId": "de9c97f2-1798-4fb3-c78b-8e4a3e35c298"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Student object at 0x79eb1b2b2ff0>\n",
+            "<__main__.Student object at 0x7c207f081220>\n",
             "1\n",
             "홍길동\n",
             "99\n",
@@ -330,15 +330,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aePphucB0mV-",
-        "outputId": "4b0f6e05-9767-4ac3-ae67-a7409bf91cc7"
+        "outputId": "1c9b889b-3513-4ca2-c3aa-4226a6510538"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Student object at 0x79eb1b2b17f0>\n",
+            "<__main__.Student object at 0x7c207f0829c0>\n",
             "2\n",
             "오쌤\n",
             "90\n",
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "x-GVJOKgWh-T"
       },
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -376,21 +376,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yGh_2miDXGl8",
-        "outputId": "c7dbc695-528e-4566-accb-9ee02a0ca1a7"
+        "outputId": "7cfeb6c8-2ec5-4218-bee1-772bd576a79e"
       },
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<__main__.Student at 0x79eb1b2b1f10>,\n",
-              " <__main__.Student at 0x79eb1b2b3e00>,\n",
-              " <__main__.Student at 0x79eb1b2b39b0>]"
+              "[<__main__.Student at 0x7c207f080740>,\n",
+              " <__main__.Student at 0x7c207f082e10>,\n",
+              " <__main__.Student at 0x7c207f082e70>]"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 13
         }
       ]
     },
@@ -405,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nXWndP_jXInT",
-        "outputId": "4e9f4a24-74b4-4238-f428-136816edcb82"
+        "outputId": "3fa13c3f-53b9-4db6-8809-99b7a6947f04"
       },
-      "execution_count": 28,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
       "metadata": {
         "id": "Lhk5KiI3XlEt"
       },
-      "execution_count": 29,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -490,15 +490,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QKMBe8HFa3GN",
-        "outputId": "26abe538-e14e-4dc6-ca81-836b6f3a9e2b"
+        "outputId": "12c8e197-6d3b-451d-b0b9-c469e35d7137"
       },
-      "execution_count": 30,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Circle object at 0x79eb2b5ec470>\n",
+            "<__main__.Circle object at 0x7c207f02b0b0>\n",
             "1\n",
             "3.14\n",
             "6.28\n"
@@ -520,15 +520,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0eDzujJCcVuk",
-        "outputId": "49ef30ca-046c-4be1-e4f2-0f451f4731a1"
+        "outputId": "b91a3599-2e6d-4c92-9b62-ca5a4878a025"
       },
-      "execution_count": 31,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Circle object at 0x79eb1b2b1e80>\n",
+            "<__main__.Circle object at 0x7c207f0838c0>\n",
             "10\n",
             "314.0\n",
             "62.800000000000004\n"
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "I_DTsgkXjL9-"
       },
-      "execution_count": 32,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -590,15 +590,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XJJqoNIAqn-P",
-        "outputId": "230ec69d-c93f-48b1-e6e2-d19644d96ccc"
+        "outputId": "258322b0-2ca2-4fa8-d94a-d87889042ba5"
       },
-      "execution_count": 33,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Rectangle object at 0x79eb1b2abc20>\n"
+            "<__main__.Rectangle object at 0x7c207f082c60>\n"
           ]
         }
       ]
@@ -616,9 +616,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DQEybvHrH0J",
-        "outputId": "ec28fbb6-4c98-4037-f604-88286459902e"
+        "outputId": "6b20ad24-86a1-4316-a6fc-43709e5a50bd"
       },
-      "execution_count": 34,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,9 +645,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XIz5tNPRr3GI",
-        "outputId": "5fc32d43-10a4-4e06-841f-ce606aaf5ac5"
+        "outputId": "92c863d9-2165-4779-e939-7cfc17a7e98b"
       },
-      "execution_count": 35,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,9 +670,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yctrxTXFyY5y",
-        "outputId": "3fcfa897-9555-4f3a-f891-3eb7470d5091"
+        "outputId": "28482830-e765-4cf0-beec-59546994ce93"
       },
-      "execution_count": 36,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,9 +694,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "htyBhddty6yB",
-        "outputId": "e67915da-7592-428b-9aa4-5a4df2d9b93c"
+        "outputId": "7a9551ac-593e-4b06-dec1-2f2acb18a292"
       },
-      "execution_count": 37,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +755,7 @@
       "metadata": {
         "id": "gZsYal8RzKdS"
       },
-      "execution_count": 38,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -769,9 +769,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wXXuRzAuCeEN",
-        "outputId": "b796baa4-65b6-4306-e18b-33f2a625afb3"
+        "outputId": "e8547391-c096-48db-8301-68e2f609310e"
       },
-      "execution_count": 39,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,9 +793,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywbn8fVeC94G",
-        "outputId": "e1b6c5f3-717a-472b-9ea2-b766ef57ccd0"
+        "outputId": "2e832aca-78ba-4f28-94d2-93a0a56a54d9"
       },
-      "execution_count": 40,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,9 +817,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8fGHNJw5DSPe",
-        "outputId": "7bf08e4d-bdb4-4dc6-bfa9-07c4925a7315"
+        "outputId": "f0be67bf-0a76-4467-b501-a05cf3d29329"
       },
-      "execution_count": 41,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,9 +840,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pcHRqrSQDucu",
-        "outputId": "b265794f-65c6-4bfe-ae8a-2907b80e70d1"
+        "outputId": "daa9bb69-2f5b-4fc9-c647-270474acce88"
       },
-      "execution_count": 42,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +852,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 28
         }
       ]
     },
@@ -866,9 +866,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ab7PK8UqGTU1",
-        "outputId": "a3fe046b-5730-424e-b2d4-caea011a3b0b"
+        "outputId": "354320a2-50c7-4c90-f931-f56c2f84862c"
       },
-      "execution_count": 43,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,9 +878,236 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 클래스 magic method"
+      ],
+      "metadata": {
+        "id": "v5ZFXa_DpBa2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "point = Point(1, 2)  # 생성자 호출 -> 객체 생성"
+      ],
+      "metadata": {
+        "id": "9VeLYuDxpHPQ"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(point)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xn2vUKVYpfK5",
+        "outputId": "b1f87e08-d962-4c5d-dc28-07bb815a30b6"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Point object at 0x7c207e3e3110>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "point"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mimIZN88qD4Y",
+        "outputId": "afae197e-cced-436e-8777-4ed6ea109472"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.Point at 0x7c207e3e3110>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir(point)  # point 객체의 모든 속성(변수 & 메서드)들을 열거."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ife3JMZRrfIH",
+        "outputId": "ca4b8e59-d890-4653-acb8-46aa2139a516"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__class__',\n",
+              " '__delattr__',\n",
+              " '__dict__',\n",
+              " '__dir__',\n",
+              " '__doc__',\n",
+              " '__eq__',\n",
+              " '__format__',\n",
+              " '__ge__',\n",
+              " '__getattribute__',\n",
+              " '__getstate__',\n",
+              " '__gt__',\n",
+              " '__hash__',\n",
+              " '__init__',\n",
+              " '__init_subclass__',\n",
+              " '__le__',\n",
+              " '__lt__',\n",
+              " '__module__',\n",
+              " '__ne__',\n",
+              " '__new__',\n",
+              " '__reduce__',\n",
+              " '__reduce_ex__',\n",
+              " '__repr__',\n",
+              " '__setattr__',\n",
+              " '__sizeof__',\n",
+              " '__str__',\n",
+              " '__subclasshook__',\n",
+              " '__weakref__',\n",
+              " 'distance',\n",
+              " 'move',\n",
+              " 'x',\n",
+              " 'y']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "    def __init__(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return f'Person(name={self.name}, age={self.age})'\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'이름={self.name}, 나이={self.age}'"
+      ],
+      "metadata": {
+        "id": "XpksyPiGrowp"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = Person('홍길동', 16)"
+      ],
+      "metadata": {
+        "id": "vpM6ldMYtN0a"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(p)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YdASCWtgtYpy",
+        "outputId": "063cb7fa-579e-45ce-aed0-393ee2e8fa67"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Person(name=홍길동, age=16)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`print(obj)` 함수의 동작 원리:\n",
+        "\n",
+        "*   클래스에서 `__str__()`, `__repr__()` 메서드를 선언하지 않은 경우에, `ClassName object at ...` 형식의 문자열을 출력.\n",
+        "*   클래스에서 `__str__()` 메서드를 선언한 경우에, `__str__()` 메서드가 리턴하는 문자열을 출력.\n",
+        "*   클래스에서 `__str__()` 메서드가 선언되지 않은 경우, `__repr__()` 메서드가 리턴하는 문자열을 출력.\n"
+      ],
+      "metadata": {
+        "id": "kgWlBX9Sv8Rf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "31HWLeP_tZng",
+        "outputId": "2f74e53b-8b1a-4bcf-afe2-e60f261a2331"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "이름=홍길동, 나이=16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mID3Gnppthtx"
+      },
+      "execution_count": 58,
+      "outputs": []
     }
   ]
 }
