Class magic method

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPuUpUmJ9g3xzfPLv4xe2dK",
+      "authorship_tag": "ABX9TyN+xG1ldyWyvVM+xEuw3CA8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1068,7 +1068,8 @@
         "\n",
         "*   클래스에서 `__str__()`, `__repr__()` 메서드를 선언하지 않은 경우에, `ClassName object at ...` 형식의 문자열을 출력.\n",
         "*   클래스에서 `__str__()` 메서드를 선언한 경우에, `__str__()` 메서드가 리턴하는 문자열을 출력.\n",
-        "*   클래스에서 `__str__()` 메서드가 선언되지 않은 경우, `__repr__()` 메서드가 리턴하는 문자열을 출력.\n"
+        "*   클래스에서 `__str__()` 메서드가 선언되지 않은 경우, `__repr__()` 메서드가 리턴하는 문자열을 출력.\n",
+        "*   `__str__()` 메서드 있는가? --> `__repr__()` 메서드가 있는가? --> `ClassName object at ...`\n"
       ],
       "metadata": {
         "id": "kgWlBX9Sv8Rf"
@@ -1101,13 +1102,151 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Jupyter Notebook의 코드 셀은 가장 마지막 줄(line)이 변수, 함수 호출, 식(expression)일 때, 그 값을 자동으로 출력해 주는 기능을 가지고 있다.\n",
+        "\n",
+        "*   객체의 `__repr__()` 메서드가 리턴하는 문자열으로 출력.\n",
+        "*   클래스에서 `__repr__()` 메서드를 선언하지 않은 경우, `ClassName at ...` 형식의 문자열을 출력.\n"
+      ],
       "metadata": {
-        "id": "mID3Gnppthtx"
+        "id": "UNKo-ASq2g8d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 클래스 작성 연습\n",
+        "\n",
+        "*   Score 클래스\n",
+        "    *   속성: 국어(korean), 영어(english), 수학(math)\n",
+        "        *   객체를 초기화할 때 기본값은 모두 0.\n",
+        "    *   메서드:\n",
+        "        *   get_total: 국/영/수 총점 리턴.\n",
+        "        *   get_mean: 국/영/수 평균 리턴.\n",
+        "        *   `__str__`: `Score(korean=0, english=0, math=0)` 형식의 문자열을 리턴.\n",
+        "        *   `__repr__`: `점수(국어=0, 영어=0, 수학=0)` 형식의 문자열을 리턴.\n",
+        "\n",
+        "*   Student 클래스\n",
+        "    *   속성: 번호(id), 이름(name), 점수(score: Score 클래스 타입을 저장하는 변수)\n",
+        "    *   메서드:\n",
+        "        *   `__str__`\n",
+        "        *   `__repr__`\n"
+      ],
+      "metadata": {
+        "id": "FtXxnhqD4WkK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Score:\n",
+        "    def __init__(self, korean=0, english=0, math=0):\n",
+        "        self.korean = korean\n",
+        "        self.english = english\n",
+        "        self.math = math\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return f'Score(korean={self.korean}, english={self.english}, math={self.math})'\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'점수(국어={self.korean}, 영어={self.english}, 수학={self.math})'\n",
+        "\n",
+        "    def get_total(self):\n",
+        "        return self.korean + self.english + self.math\n",
+        "\n",
+        "    def get_mean(self):\n",
+        "        return self.get_total() / 3"
+      ],
+      "metadata": {
+        "id": "mZbJAlFc9c3T"
       },
-      "execution_count": 58,
+      "execution_count": 59,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score1 = Score()\n",
+        "print(score1)\n",
+        "score1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uo6-cRhG_lAN",
+        "outputId": "2fe2956e-86cf-498c-8f18-2c1090578cca"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Score(korean=0, english=0, math=0)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "점수(국어=0, 영어=0, 수학=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score2 = Score(korean=100, math=90)\n",
+        "print(score2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Onz-ndnD_42V",
+        "outputId": "dab1d670-935d-4fa5-b3d5-d9f3c7646ce1"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Score(korean=100, english=0, math=90)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(score2.get_total())\n",
+        "print(score2.get_mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "npnbd6vfABxt",
+        "outputId": "730c9786-6afc-4aee-d014-2fe8bd9ae00a"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "190\n",
+            "63.333333333333336\n"
+          ]
+        }
+      ]
     }
   ]
 }
