--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+xG1ldyWyvVM+xEuw3CA8",
+      "authorship_tag": "ABX9TyNzKxlszR+XIyamFNqL8ZeD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1244,6 +1244,145 @@
           "text": [
             "190\n",
             "63.333333333333336\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, id, name, score):\n",
+        "        self.id = id\n",
+        "        self.name = name\n",
+        "        self.score = score\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        # return f'Student(id={self.id}, name={self.name}, score={self.score})'\n",
+        "        return f'Student(id={self.id}, name={self.name}, korean={self.score.korean}, english={self.score.english}, math={self.score.math}, total={self.score.get_total()}, mean={self.score.get_mean()})'\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        # __str__ 메서드가 리턴하는 문자열을 리턴함.\n",
+        "        return self.__str__()"
+      ],
+      "metadata": {
+        "id": "4ZENXJodDLxu"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hgd = Student(id=1, name='홍길동', score=score1)\n",
+        "print(hgd)\n",
+        "hgd"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qlq3GG1SEeT2",
+        "outputId": "c0fff63b-1069-4555-9c60-d2a069bf3b8c"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student(id=1, name=홍길동, korean=0, english=0, math=0, total=0, mean=0.0)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Student(id=1, name=홍길동, korean=0, english=0, math=0, total=0, mean=0.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "j32ntc_uEz7c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(hgd.score.get_total())  # 홍길동 점수 합계\n",
+        "print(hgd.score.get_mean())  # 홍길동 점수 평균"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T0kmj6ZtEuV_",
+        "outputId": "1fbe713d-f218-48c5-adee-97c754d58ef7"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ssam = Student(id=1004, name='오쌤', score=Score(99, 88, 100))\n",
+        "print(ssam)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LUoyeD8pF5VO",
+        "outputId": "3b57ab15-8e8b-4217-fc56-2042eef9ea04"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student(id=1004, name=오쌤, korean=99, english=88, math=100, total=287, mean=95.66666666666667)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ssam.score.get_total())\n",
+        "print(ssam.score.get_mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jQOIkWIaHEbe",
+        "outputId": "3ddf4ec3-6704-4f8b-9464-20ef754b6232"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "287\n",
+            "95.66666666666667\n"
           ]
         }
       ]
