상속 & 메서드 override

--- a/lab_python/python14_inheritance.ipynb
+++ b/lab_python/python14_inheritance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMh66eSi0pTroT4C/j0NMb",
+      "authorship_tag": "ABX9TyPIj6XsPL/leMMt7TQZmK9X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "V8bon4LogPzi"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "-GE7m8sZhBb0"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEfcX98ahgJD",
-        "outputId": "328fcdae-7ae3-46ee-8cba-5f00fb68a618"
+        "outputId": "5835126a-5972-4f84-def6-e37a2cc50c75"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OQz03m9xhr4z",
-        "outputId": "2464e0aa-4013-48f3-f524-7f3703728334"
+        "outputId": "4af8007d-1674-4689-fb26-791dde3e6394"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,6 +187,183 @@
       "metadata": {
         "id": "WoBZK_zSluC0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 회사원은 사람이다.(사람-상위클래스, 회사원-하위클래스)\n",
+        "class BusinessPerson(Person):\n",
+        "    # __init__ 메서드 override\n",
+        "    def __init__(self, name, company):\n",
+        "        super().__init__(name)  # 상위 클래스 Person의 __init__ 메서드 호출\n",
+        "        self.company = company  # 상위 클래스에는 없고, 하위 클래스에만 있는 속성(변수) 초기화\n",
+        "\n",
+        "    # say_hello 메서드 override\n",
+        "    def say_hello(self):\n",
+        "        super().say_hello()  # 상위 클래스 Person의 say_hello 메서드 호출\n",
+        "        print(f'저는 {self.company}에 다닙니다.')"
+      ],
+      "metadata": {
+        "id": "ltt_45Mnq9mc"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# BusinessPerson 타입의 객체를 생성\n",
+        "hgd = BusinessPerson('홍길동', '아이티윌')"
+      ],
+      "metadata": {
+        "id": "ti2ZKqNlskD2"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hgd.say_hello()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4skdtLaUtakH",
+        "outputId": "604f5264-cfc1-4fca-a10a-ca5d1c4d2f10"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요, 저는 홍길동입니다.\n",
+            "저는 아이티윌에 다닙니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 상속 & 메서드 override 연습\n",
+        "\n",
+        "*   하이브리드 자동차는 자동차이다.\n",
+        "    *   자동차 - 상위 클래스\n",
+        "    *   하이브리드 자동차 - 하위 클래스"
+      ],
+      "metadata": {
+        "id": "WpPvJgKuwG31"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 상위 클래스 선언\n",
+        "class Car:\n",
+        "    def __init__(self, fuel):\n",
+        "        self.fuel = fuel\n",
+        "\n",
+        "    def drive(self):\n",
+        "        print(f'자동차 운전: 연료={self.fuel}L')"
+      ],
+      "metadata": {
+        "id": "ma4HrDFqwJ8k"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Car 타입의 객체를 생성\n",
+        "car1 = Car(50)"
+      ],
+      "metadata": {
+        "id": "FY9O2odkwzkX"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "car1.drive()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mo7RtzYoxFom",
+        "outputId": "77eb0a3d-9890-42f0-b365-1682910de7a8"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "자동차 운전: 연료=50L\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Car 클래스를 상속하는 HybridCar 클래스 선언:\n",
+        "class HybridCar(Car):\n",
+        "    # 상위 클래스 Car의 __init__ 메서드를 override.\n",
+        "    def __init__(self, fuel, battery):\n",
+        "        super().__init__(fuel)\n",
+        "        self.battery = battery\n",
+        "\n",
+        "    # 상위 클래스 Car의 drive 메서드를 override.\n",
+        "    def drive(self):\n",
+        "        print(f'하이브리드 자동차 운전: 연료={self.fuel}L, 배터리={self.battery}%')"
+      ],
+      "metadata": {
+        "id": "yFdmSsgGxIeu"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# HybridCar 타입 객체 생성\n",
+        "car2 = HybridCar(80, 100)"
+      ],
+      "metadata": {
+        "id": "CDy0qaStzOGQ"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "car2.drive()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3wJJcECrzYAu",
+        "outputId": "aca2fe82-c397-42a8-e31e-0078b626917d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "하이브리드 자동차 운전: 연료=80L, 배터리=100%\n"
+          ]
+        }
+      ]
     }
   ]
 }
