isinstance 함수, 상속

--- a/lab_python/python14_inheritance.ipynb
+++ b/lab_python/python14_inheritance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPIj6XsPL/leMMt7TQZmK9X",
+      "authorship_tag": "ABX9TyOn232EhctnjjRC6PfA7Zwt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "ltt_45Mnq9mc"
       },
-      "execution_count": 26,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "ti2ZKqNlskD2"
       },
-      "execution_count": 27,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4skdtLaUtakH",
-        "outputId": "604f5264-cfc1-4fca-a10a-ca5d1c4d2f10"
+        "outputId": "df0caf1d-14b7-4593-9de7-e5ebfaca090e"
       },
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,6 +361,169 @@
           "name": "stdout",
           "text": [
             "하이브리드 자동차 운전: 연료=80L, 배터리=100%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# `isinstance(object, ClassName)` 함수\n",
+        "\n",
+        "객체(object)가 어떤 클래스 타입의 인스턴스(생성된 객체)인 지 아닌 지(True/False)를 리턴하는 함수."
+      ],
+      "metadata": {
+        "id": "fY3w8-Cn5MjX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3]\n",
+        "print(isinstance(numbers, list))  #> numbers가 list 타입의 인스턴스인가요? True\n",
+        "print(isinstance(numbers, dict))  #> numbers가 dict 타입의 인스턴스인가요? False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S8AMdA-Y56fo",
+        "outputId": "62a4064f-0d74-4095-f7d4-142ac6ea3ad1"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `isinstance` 함수와 상속"
+      ],
+      "metadata": {
+        "id": "T1XOG5aP6g1X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# car1 - Car 타입 객체(Car 생성자를 호출해서 생성한 객체)\n",
+        "print(isinstance(car1, Car))  #> True\n",
+        "print(isinstance(car1, HybridCar))  #> False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5bjracL6G-o",
+        "outputId": "a4346e74-b7fa-4742-fc9e-4f2b1d16eeef"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# car2 - HybridCar 타입 객체(HybridCar 생성자를 호출해서 생성한 객체)\n",
+        "print(isinstance(car2, Car))  #> True\n",
+        "print(isinstance(car2, HybridCar))  #> True"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DhGdd6AM7K4Z",
+        "outputId": "3e12191d-cc32-4321-d260-d60e7076bd76"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `isinstance` 함수 활용"
+      ],
+      "metadata": {
+        "id": "bQ9HZLQC9Lkw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 강아지는 동물이다. 물고기는 동물이다. (동물->상위클래스, 강아지/물고기->하위클래스)\n",
+        "class Animal:\n",
+        "    def move(self):\n",
+        "        pass\n",
+        "\n",
+        "class Dog(Animal):\n",
+        "    def move(self):\n",
+        "        print('강아지가 총총총...')\n",
+        "\n",
+        "class Fish(Animal):\n",
+        "    def move(self):\n",
+        "        print('물고기는 스윔스윔...')\n",
+        "\n",
+        "class Tree:\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "Xfc2sCOu7jZg"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dog = Dog()  # Dog 타입의 객체를 생성\n",
+        "fish = Fish()  # Fish 타입의 객체를 생성\n",
+        "tree = Tree()  # Tree 타입의 객체를 생성\n",
+        "\n",
+        "arr = [dog, fish, tree]\n",
+        "for x in arr:\n",
+        "    if isinstance(x, Animal):\n",
+        "        x.move()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_X0bIQN4-rhy",
+        "outputId": "57c03e5b-bda7-4e48-fb1c-41d7e4cd801a"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "강아지가 총총총...\n",
+            "물고기는 스윔스윔...\n"
           ]
         }
       ]
